# xarray-accessors

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/_apidoc/: xarray_accessors.doctree  xarray_accessors.utils.doctree
.github/workflows/: test.yml  tests.yml
_apidoc/: xarray_accessors.html  xarray_accessors.utils.html
_modules/: index.html
_modules/xarray_accessors/: utils.html
_sources/: readme.rst.txt
_sources/_apidoc/: xarray_accessors.rst.txt  xarray_accessors.utils.rst.txt
docs/: build  conf.py  docs  index.rst
tests/: test_accessor.py  test_metadata.py  test_utils.py
xarray_accessors/: __init__.py  accessor.py  utils.py
