[tool.poetry]
name = "xarray-accessors"
version = "0.1.0"
description = "xarray extension for easy accessor creation"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/xarray-accessors/"
documentation = "https://astropenguin.github.io/xarray-accessors/"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^3.7"
xarray = ">=0.15, <1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b"
flake8 = "^3.9"
ipython = "^7.26"
pydata-sphinx-theme = "^0.6"
pytest = "^6.2"
sphinx = "^4.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
